objects/maps__AdvRouteRoutableObject__c.object
<CustomObject>
    <description>This will hold any Advanced Route defaults needed for an object</description>
    <fields>
        <fullName>maps__AvailableHoursDefaults__c</fullName>
        <description>This holds any defaults needed to determine the available hours of records</description>
        <label>Available Hours Defaults</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__CoreBaseObjectId__c</fullName>
        <description>This is the id of the base object associated to the Routable object</description>
        <label>Core Base Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DefaultEndDate__c</fullName>
        <description>This is the default end date used for promo windows</description>
        <label>Default End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__DefaultFrequencyLengthUnits__c</fullName>
        <description>This is the default frequency length units</description>
        <label>Default Frequency Length Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>weeks</fullName>
                </value>
                <value>
                    <fullName>months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__DefaultFrequencyLength__c</fullName>
        <description>This is the default value used for frequency length</description>
        <label>Default Frequency Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultMaxDaysBetweenVisits__c</fullName>
        <description>This is the default value used for maximum days between visits</description>
        <label>Default Max Days Between Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultMinDaysBetweenVisits__c</fullName>
        <description>This is the default value used for minimum days between visits</description>
        <label>Default Min Days Between Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultStartDate__c</fullName>
        <description>This is the default start date used for promo windows</description>
        <label>Default Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__DefaultTargetVisits__c</fullName>
        <description>This is the default value used for target number of visits</description>
        <label>Default Target Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultVisitDuration__c</fullName>
        <description>This is the default value used when determining the duration needed for a visit</description>
        <label>Default Visit Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__EndDateField__c</fullName>
        <description>This is the date field to use as the end date for promo windows</description>
        <label>End Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__FrequencyLengthField__c</fullName>
        <description>This is the field used for frequency length</description>
        <label>Frequency Length Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__IsPromo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines if the Routable object is to be used as a promo window or not</description>
        <label>Promo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MaxDaysBetweenVisitsField__c</fullName>
        <description>This is the field used to get the maximum number of days between visits</description>
        <label>Max Days Between Visits Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MinDaysBetweenVisitsField__c</fullName>
        <description>This is the field used to get the minimum number of days between visits</description>
        <label>Min Days Between Visits Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Object__c</fullName>
        <description>This is the api of the object the record belongs to</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PromoAvailableFor__c</fullName>
        <description>This associates the promo window with the Routable objects it is available for</description>
        <label>Promo Available For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__PromoFieldAssociation__c</fullName>
        <description>This tells us how the promo window object connects to the Routable object</description>
        <label>Promo Field Association</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PromoObject__c</fullName>
        <description>This is the api of the object used for promo windows if different from the Routable object&apos;s object</description>
        <label>Promo Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__StartDateField__c</fullName>
        <description>This is the date field to use as the start date for promo windows</description>
        <label>Start Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TargetVisitsField__c</fullName>
        <description>This is the field to use for the target number of visits</description>
        <label>Target Visits Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TooltipFieldApis__c</fullName>
        <description>This is a JSON array of field apis used to create tooltips</description>
        <label>Tooltip Field Apis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__VisitDurationField__c</fullName>
        <description>This is the field used to determine the visit duration</description>
        <label>Visit Duration Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Advanced Route Routable Object</label>
    <nameField>
        <label>Maps Advanced Route Routable Object Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Routable Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>